--- a/.github/workflows/build-livecd.yml
+++ b/.github/workflows/build-livecd.yml
@@ -192,23 +192,313 @@ jobs:
 
             # Si la descarga falló, crear un script alternativo de instalación
             if [ ! -f custom-packages/calamares.pkg.tar.xz ]; then
-              echo "Creating alternative installer script..."
+              echo "Creating functional installer script..."
               mkdir -p airootfs/usr/local/bin
               cat > airootfs/usr/local/bin/arch-installer << "INSTALLEREOF"
           #!/bin/bash
-          # Script de instalación alternativo para Arch Linux
-          echo "=== Instalador de Arch Linux ==="
-          echo "Este es un instalador básico. Para una instalación completa:"
-          echo "1. Particiona el disco con: cfdisk /dev/sdX"
-          echo "2. Formatea las particiones"
-          echo "3. Monta las particiones en /mnt"
-          echo "4. Ejecuta: pacstrap /mnt base linux linux-firmware"
-          echo "5. Ejecuta: genfstab -U /mnt >> /mnt/etc/fstab"
-          echo "6. Ejecuta: arch-chroot /mnt"
-          echo ""
-          echo "¿Quieres abrir la guía de instalación de Arch Linux?"
-          read -p "Presiona Enter para continuar..."
-          firefox "https://wiki.archlinux.org/title/Installation_guide" &
+
+          # Arch Linux Installer Script
+          # Script de instalación guiada para Arch Linux
+
+          set -e
+
+          # Colores para output
+          RED='\033[0;31m'
+          GREEN='\033[0;32m'
+          YELLOW='\033[1;33m'
+          BLUE='\033[0;34m'
+          NC='\033[0m' # No Color
+
+          # Función para imprimir mensajes
+          print_msg() {
+              echo -e "${GREEN}[INFO]${NC} $1"
+          }
+
+          print_warning() {
+              echo -e "${YELLOW}[WARNING]${NC} $1"
+          }
+
+          print_error() {
+              echo -e "${RED}[ERROR]${NC} $1"
+          }
+
+          print_title() {
+              echo -e "${BLUE}=== $1 ===${NC}"
+          }
+
+          # Verificar si estamos ejecutando como root
+          check_root() {
+              if [[ $EUID -ne 0 ]]; then
+                  print_error "Este script debe ejecutarse como root"
+                  exit 1
+              fi
+          }
+
+          # Verificar conexión a internet
+          check_internet() {
+              print_msg "Verificando conexión a internet..."
+              if ! ping -c 1 archlinux.org &> /dev/null; then
+                  print_error "No hay conexión a internet. Configura la red primero."
+                  print_msg "Para WiFi: nmtui o nmcli dev wifi connect SSID password PASSWORD"
+                  exit 1
+              fi
+              print_msg "Conexión a internet OK"
+          }
+
+          # Actualizar reloj del sistema
+          update_clock() {
+              print_msg "Actualizando reloj del sistema..."
+              timedatectl set-ntp true
+          }
+
+          # Mostrar discos disponibles
+          show_disks() {
+              print_title "Discos disponibles"
+              lsblk -f
+              echo ""
+              fdisk -l | grep "Disk /"
+          }
+
+          # Función para particionar disco
+          partition_disk() {
+              show_disks
+              echo ""
+              read -p "Introduce el disco a particionar (ej: /dev/sda): " DISK
+
+              if [[ ! -b "$DISK" ]]; then
+                  print_error "El disco $DISK no existe"
+                  exit 1
+              fi
+
+              print_warning "¡ATENCIÓN! Esto borrará todos los datos en $DISK"
+              read -p "¿Continuar? (yes/no): " confirm
+              if [[ "$confirm" != "yes" ]]; then
+                  print_msg "Instalación cancelada"
+                  exit 0
+              fi
+
+              print_msg "Abriendo cfdisk para particionar $DISK"
+              print_msg "Crea al menos:"
+              print_msg "1. Partición EFI (512MB, tipo EFI System) si tienes UEFI"
+              print_msg "2. Partición root (20GB+, tipo Linux filesystem)"
+              print_msg "3. Partición swap (tamaño de RAM, tipo Linux swap) - opcional"
+              print_msg "Presiona Enter para continuar..."
+              read
+
+              cfdisk "$DISK"
+          }
+
+          # Formatear particiones
+          format_partitions() {
+              show_disks
+              echo ""
+
+              # Detectar si es UEFI
+              if [[ -d /sys/firmware/efi/efivars ]]; then
+                  UEFI=true
+                  print_msg "Sistema UEFI detectado"
+                  read -p "Partición EFI (ej: /dev/sda1): " EFI_PART
+                  read -p "Partición root (ej: /dev/sda2): " ROOT_PART
+              else
+                  UEFI=false
+                  print_msg "Sistema BIOS detectado"
+                  read -p "Partición root (ej: /dev/sda1): " ROOT_PART
+              fi
+
+              read -p "Partición swap (opcional, presiona Enter para omitir): " SWAP_PART
+
+              # Formatear particiones
+              print_msg "Formateando particiones..."
+
+              if [[ "$UEFI" == true ]]; then
+                  print_msg "Formateando partición EFI..."
+                  mkfs.fat -F32 "$EFI_PART"
+              fi
+
+              print_msg "Formateando partición root..."
+              mkfs.ext4 "$ROOT_PART"
+
+              if [[ -n "$SWAP_PART" ]]; then
+                  print_msg "Configurando swap..."
+                  mkswap "$SWAP_PART"
+                  swapon "$SWAP_PART"
+              fi
+
+              # Montar particiones
+              print_msg "Montando particiones..."
+              mount "$ROOT_PART" /mnt
+
+              if [[ "$UEFI" == true ]]; then
+                  mkdir -p /mnt/boot/efi
+                  mount "$EFI_PART" /mnt/boot/efi
+              fi
+          }
+
+          # Instalar sistema base
+          install_base() {
+              print_msg "Actualizando mirrors..."
+              reflector --country Spain,France,Germany --age 12 --protocol https --sort rate --save /etc/pacman.d/mirrorlist
+
+              print_msg "Instalando sistema base..."
+              pacstrap /mnt base linux linux-firmware base-devel
+
+              print_msg "Generando fstab..."
+              genfstab -U /mnt >> /mnt/etc/fstab
+          }
+
+          # Configurar sistema
+          configure_system() {
+              print_msg "Configurando sistema..."
+
+              # Crear script de configuración
+              cat > /mnt/root/configure.sh << 'CONFEOF'
+          #!/bin/bash
+
+          # Configurar timezone
+          ln -sf /usr/share/zoneinfo/Europe/Madrid /etc/localtime
+          hwclock --systohc
+
+          # Configurar locale
+          sed -i 's/#es_ES.UTF-8 UTF-8/es_ES.UTF-8 UTF-8/' /etc/locale.gen
+          sed -i 's/#en_US.UTF-8 UTF-8/en_US.UTF-8 UTF-8/' /etc/locale.gen
+          locale-gen
+          echo "LANG=es_ES.UTF-8" > /etc/locale.conf
+          echo "KEYMAP=es" > /etc/vconsole.conf
+
+          # Configurar hostname
+          read -p "Nombre del equipo: " hostname
+          echo "$hostname" > /etc/hostname
+          cat > /etc/hosts << EOF
+          127.0.0.1   localhost
+          ::1         localhost
+          127.0.1.1   $hostname.localdomain $hostname
+          EOF
+
+          # Configurar usuario root
+          echo "Configurar contraseña para root:"
+          passwd
+
+          # Crear usuario
+          read -p "Nombre de usuario: " username
+          useradd -m -G wheel,audio,video,storage,optical,network,power -s /bin/bash "$username"
+          echo "Configurar contraseña para $username:"
+          passwd "$username"
+
+          # Configurar sudo
+          sed -i 's/# %wheel ALL=(ALL:ALL) ALL/%wheel ALL=(ALL:ALL) ALL/' /etc/sudoers
+
+          # Instalar y configurar bootloader
+          pacman -S --noconfirm grub
+
+          if [[ -d /sys/firmware/efi/efivars ]]; then
+              pacman -S --noconfirm efibootmgr
+              grub-install --target=x86_64-efi --efi-directory=/boot/efi --bootloader-id=GRUB
+          else
+              read -p "Disco para instalar GRUB (ej: /dev/sda): " grub_disk
+              grub-install --target=i386-pc "$grub_disk"
+          fi
+
+          grub-mkconfig -o /boot/grub/grub.cfg
+
+          # Instalar NetworkManager
+          pacman -S --noconfirm networkmanager
+          systemctl enable NetworkManager
+
+          echo "Configuración completada!"
+          CONFEOF
+
+              chmod +x /mnt/root/configure.sh
+
+              print_msg "Entrando en chroot para configurar el sistema..."
+              arch-chroot /mnt /root/configure.sh
+
+              # Limpiar
+              rm /mnt/root/configure.sh
+          }
+
+          # Instalar entorno de escritorio
+          install_desktop() {
+              read -p "¿Instalar KDE Plasma? (y/n): " install_kde
+              if [[ "$install_kde" == "y" || "$install_kde" == "Y" ]]; then
+                  print_msg "Instalando KDE Plasma..."
+                  arch-chroot /mnt pacman -S --noconfirm plasma-desktop sddm konsole dolphin kate firefox
+                  arch-chroot /mnt systemctl enable sddm
+              fi
+          }
+
+          # Finalizar instalación
+          finish_installation() {
+              print_msg "Desmontando particiones..."
+              umount -R /mnt
+
+              print_title "¡Instalación completada!"
+              print_msg "El sistema está listo. Puedes reiniciar ahora."
+              print_warning "Recuerda quitar el USB de instalación antes de reiniciar"
+
+              read -p "¿Reiniciar ahora? (y/n): " reboot_now
+              if [[ "$reboot_now" == "y" || "$reboot_now" == "Y" ]]; then
+                  reboot
+              fi
+          }
+
+          # Función principal
+          main() {
+              print_title "Instalador de Arch Linux"
+              print_msg "Este script te guiará en la instalación de Arch Linux"
+              print_warning "Asegúrate de tener backups de datos importantes"
+              echo ""
+
+              read -p "¿Continuar con la instalación? (y/n): " continue_install
+              if [[ "$continue_install" != "y" && "$continue_install" != "Y" ]]; then
+                  print_msg "Instalación cancelada"
+                  exit 0
+              fi
+
+              check_root
+              check_internet
+              update_clock
+              partition_disk
+              format_partitions
+              install_base
+              configure_system
+              install_desktop
+              finish_installation
+          }
+
+          # Función de ayuda
+          show_help() {
+              echo "Instalador de Arch Linux"
+              echo ""
+              echo "Opciones:"
+              echo "  install    - Iniciar instalación guiada"
+              echo "  manual     - Abrir guía manual de instalación"
+              echo "  partition  - Solo particionar disco"
+              echo "  help       - Mostrar esta ayuda"
+              echo ""
+              echo "Para instalación manual, consulta: https://wiki.archlinux.org/title/Installation_guide"
+          }
+
+          # Verificar argumentos
+          case "${1:-install}" in
+              "install")
+                  main
+                  ;;
+              "manual")
+                  firefox "https://wiki.archlinux.org/title/Installation_guide" &
+                  ;;
+              "partition")
+                  show_disks
+                  partition_disk
+                  ;;
+              "help"|"-h"|"--help")
+                  show_help
+                  ;;
+              *)
+                  print_error "Opción desconocida: $1"
+                  show_help
+                  exit 1
+                  ;;
+          esac
           INSTALLEREOF
               chmod +x airootfs/usr/local/bin/arch-installer
             fi
@@ -227,10 +517,11 @@ jobs:
             cat > airootfs/etc/skel/Desktop/arch-installer.desktop << "DESKTOP_EOF"
           [Desktop Entry]
           Name=Instalador de Arch Linux
+          Name[en]=Arch Linux Installer
           Name[es]=Instalador de Arch Linux
-          Comment=Install Arch Linux to your computer
-          Comment[es]=Instala Arch Linux en tu computadora
-          Exec=konsole -e sudo arch-installer
+          Comment=Install Arch Linux to your computer with guided installer
+          Comment[es]=Instala Arch Linux en tu computadora con instalador guiado
+          Exec=konsole --hold -e sudo arch-installer
           Icon=system-software-install
           Terminal=false
           Type=Application
