--- a/.github/workflows/build-livecd.yml
+++ b/.github/workflows/build-livecd.yml
@@ -340,134 +340,8 @@ jobs:
           #!/bin/bash
 
           # PlayNix Arch Linux Installer - Usando archinstall oficial
-          set -e
+          sudo archinstall --config /etc/archinstall/user_configuration.json --creds /etc/archinstall/user_credentials.json --silent
 
-          # Colores
-          RED="\033[0;31m"
-          GREEN="\033[0;32m"
-          YELLOW="\033[1;33m"
-          BLUE="\033[0;34m"
-          NC="\033[0m"
-
-          print_msg() {
-              echo -e "${GREEN}[INFO]${NC} $1"
-          }
-
-          print_warning() {
-              echo -e "${YELLOW}[WARNING]${NC} $1"
-          }
-
-          print_error() {
-              echo -e "${RED}[ERROR]${NC} $1"
-          }
-
-          print_title() {
-              echo -e "${BLUE}=== $1 ===${NC}"
-          }
-
-          detect_disk() {
-              print_msg "Detectando disco de instalación..."
-
-              # Buscar discos NVMe primero
-              for disk in /dev/nvme*n1; do
-                  if [ -b "$disk" ]; then
-                      echo "$disk"
-                      return
-                  fi
-              done
-
-              # Buscar discos SATA/SCSI
-              for disk in /dev/sda /dev/sdb /dev/sdc; do
-                  if [ -b "$disk" ]; then
-                      echo "$disk"
-                      return
-                  fi
-              done
-
-              # Buscar discos virtuales
-              for disk in /dev/vda /dev/vdb; do
-                  if [ -b "$disk" ]; then
-                      echo "$disk"
-                      return
-                  fi
-              done
-
-              print_error "No se encontró ningún disco para instalar"
-              exit 1
-          }
-
-          main() {
-              print_title "🎮 INSTALADOR PLAYNIX - ARCH LINUX + KDE 🎮"
-
-              # Verificar permisos
-              if [ $(id -u) -ne 0 ]; then
-                  print_error "Este script debe ejecutarse como root"
-                  exit 1
-              fi
-
-              # Detectar disco
-              DISK=$(detect_disk)
-              print_msg "Disco detectado: $DISK"
-
-              # Copiar configuraciones a temporal
-              cp /etc/archinstall/user_configuration.json /tmp/
-              cp /etc/archinstall/user_credentials.json /tmp/
-
-              # Actualizar configuración con el disco detectado
-              print_msg "Configurando instalación para $DISK..."
-              sed -i "s|/dev/nvme0n1|$DISK|g" /tmp/user_configuration.json
-
-              print_warning "⚠️  ATENCIÓN: SE INSTALARÁ EN $DISK"
-              print_warning "⚠️  TODOS LOS DATOS SERÁN ELIMINADOS"
-              print_msg "Usuario: playnix | Contraseña: playnix"
-              print_msg "Hostname: playnix"
-              print_msg "Entorno: KDE Plasma"
-              echo ""
-              print_msg "⏰ La instalación comenzará en 10 segundos..."
-              print_msg "❌ Presiona Ctrl+C para CANCELAR"
-
-              for i in {10..1}; do
-                  echo -ne "\r⏳ Iniciando en: $i segundos... "
-                  sleep 1
-              done
-              echo ""
-
-              print_title "🚀 INICIANDO INSTALACIÓN CON ARCHINSTALL"
-
-              # Ejecutar archinstall
-              if archinstall --config /tmp/user_configuration.json --creds /tmp/user_credentials.json --silent; then
-                  print_title "🎉 ¡INSTALACIÓN COMPLETADA EXITOSAMENTE!"
-                  print_msg "✅ Sistema instalado en: $DISK"
-                  print_msg "✅ Usuario: playnix"
-                  print_msg "✅ Contraseña: playnix"
-                  print_msg "✅ Entorno: KDE Plasma con SDDM"
-                  print_warning "📱 Retira el USB de instalación antes de reiniciar"
-
-                  echo ""
-                  read -p "🔄 ¿Reiniciar ahora? (y/n): " reboot_choice
-                  if [ "$reboot_choice" = "y" ] || [ "$reboot_choice" = "Y" ]; then
-                      print_msg "🔄 Reiniciando en 5 segundos..."
-                      sleep 5
-                      reboot
-                  fi
-              else
-                  print_error "❌ Error durante la instalación"
-                  print_msg "📋 Verifica los logs de archinstall para más detalles"
-                  exit 1
-              fi
-          }
-
-          case "${1:-auto}" in
-              "auto"|"install"|"")
-                  main
-                  ;;
-              "manual")
-                  firefox "https://wiki.archlinux.org/title/Installation_guide" &
-                  ;;
-              *)
-                  echo "Uso: arch-installer [auto|manual]"
-                  ;;
-          esac
           INSTALLEREOF
 
           chmod +x airootfs/usr/local/bin/arch-installer
